# SuiteSparse

./: .gitignore  CMakeLists.txt  gen_defs.py  gen_wrappers.py  wscript  wscript_common.py
cmake/: FindMetis.cmake
src/CXSparse/Include/: cs.h
